full flow completed for university theme Imported from Changeset 2503

--- a/WarehouseEcommerce/Views/Theme/University/Home/Index.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Home/Index.cshtml
@@ -7,4 +7,4 @@
 @Html.Action("_TopCategoryPartial")
 @Html.Action("_SpecialProductPartial")
 @Html.Partial("_SubscribePartial")
-@Html.Partial("_BlogPartial")
+@Html.Action("_BlogPartial")
