--- a/WarehouseEcommerce/Views/Theme/University/Orders/GetAddress.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/GetAddress.cshtml
@@ -8,6 +8,7 @@
         /*height: 113px;*/
     }
 </style>
+<link href="~/Content/Theme/Smart/app/css/app.css" rel="stylesheet" />
 <div class="about bg-white get-address-page">
     <div class="container-fluid custom-max-width">
         <div class="row">
