--- a/WarehouseEcommerce/Views/Theme/University/Shared/_CartItemsPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_CartItemsPartial.cshtml
@@ -1,75 +1,68 @@
-﻿
-
+﻿@model List<Ganedata.Core.Entities.Domain.OrderDetailSessionViewModel>
 <div class="nb_basket_wrap">
     <table class="basketTable">
         <thead>
             <tr>
                 <th>Product</th>
                 <th>Price</th>
-                <th>Quantity</th>
+                @if (ViewBag.CartModal == null)
+                {
+                    <th>Quantity</th>
+                }
                 <th>Total</th>
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <td>
-                    <div class="prdimgsec">
-                        <span class="prdimg">
-                            <img src="images/prdtableitem2.jpg" />
-                        </span>
-                        <span class="prdname">Unisex Zipped Hoodie - Grey</span>
-                    </div>
-                </td>
-                <td>
-                    <div id="price" class="price">
-                        £34.99
-                    </div>
-                </td>
-                <td>
-                    <div class="qtyboxwrap">
-                        <span id="decre_count" class="min">-</span>
-                        <input id="counter" type="number" value="1" />
-                        <span id="incre_count" class="max">+</span>
-                    </div>
-                </td>
-                <td>
-                    <div id="total_amnt" class="total">£34.99</div>
-                </td>
-            </tr>
 
-            <tr>
-                <td>
-                    <div class="prdimgsec">
-                        <span class="prdimg">
-                            <img src="images/prdtableitem1.jpg" />
-                        </span>
-                        <span class="prdname">Knitted Scarf</span>
-                    </div>
-                </td>
-                <td>
-                    <div id="price" class="price">
-                        £34.99
-                    </div>
-                </td>
-                <td>
-                    <div class="qtyboxwrap">
-                        <span id="decre_count" class="min">-</span>
-                        <input id="counter" type="number" value="1" />
-                        <span id="incre_count" class="max">+</span>
-                    </div>
-                </td>
-                <td>
-                    <div id="total_amnt" class="total">£34.99</div>
-                </td>
-            </tr>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        <div class="prdimgsec">
+                            <span class="prdimg">
+                                <img src="@(!string.IsNullOrEmpty(item.ProductMaster.DefaultImage)? ViewBag.BaseFilePath + item.ProductMaster.DefaultImage : ViewBag.BaseFilePath + "/UploadedFiles/Products/no_image.gif")" />
+                            </span>
+                            <span class="prdname">@(item.ProductMaster?.Name)</span>
+                        </div>
+                    </td>
+                    <td>
+                        <div id="price" class="price">
+                            @item.CurrencySign@item.Price
+                        </div>
+                    </td>
+                    @if (ViewBag.CartModal == null)
+                    {
+                        <td>
+                            <div class="qtyboxwrap">
+                                @* <span id="decre_count" class="min">-</span>*@
+                                <input id="counter" type="number" onchange="UpdateCartItem(@item.ProductId,this)" value="@item.Qty" />
+                                @* <span id="incre_count" class="max">+</span>*@
+                            </div>
+                        </td>
+                    }
+                    <td>
+                        <div id="total_amnt" class="total">@item.CurrencySign@item.TotalAmount</div>
+                    </td>
+                </tr>
+            }
 
 
         </tbody>
     </table>
 
     <div class="coupen_codewrap">
-        <input type="text" placeholder="Coupen Code" />
-        <button class="coupenSubmitbtn"><i class="icon-right-arrow"></i></button>
+        @*<input type="text" placeholder="Coupen Code" />*@
+        @if (ViewBag.CartModal == null && Model.Count > 0)
+        {
+            if (ViewBag.PlaceOrder != null)
+            {
+                <button class="cont_shop_btn" onclick="GetLoggedIn(true)">Proceed to checkout</button>
+            }
+            else
+            {
+                <button class="cont_shop_btn" onclick="window.location.href='@Url.Action("GetAddress", "Orders")'">Proceed to checkout</button>
+            }
+        }
     </div>
 
 
