--- a/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
@@ -22,6 +22,29 @@
 </head>
 
 <body>
+
+    <div class="modal fade" id="myModal" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Added to Basket</h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+
+                </div>
+                <div class="modal-body" style="overflow:auto;max-height:430px;">
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-success" onclick="CartItemCount();">Continue Shoping</button>
+                    <a href="@Url.Action("AddToCart","Products")" type="button" class="btn btn-default">Go to Basket</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     @Html.Partial("_LoginRegisterPartial")
     @Html.Action("_TopHeaderPartial", "Home")
     @*@if (ViewBag.cart == null)
