--- a/WarehouseEcommerce/Views/Theme/University/Shared/_TopHeaderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_TopHeaderPartial.cshtml
@@ -50,9 +50,9 @@
                 </a>
             </li>
             <li class="cartIcoWrap sir">
-                <a href="">
+                <a href="@Url.Action("AddToCart","Products")">
                     <i class="ico icon-shopping-cart"></i>
-                    <span>12</span>
+                    <span id="cart-total">@(ViewBag.CartItemCount??"")</span>
                 </a>
             </li>
             <li class="sir" id="nb_res_navTrigger">
