--- a/WMS/Views/Theme/Default/WebsiteSliders/_SliderList.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteSliders/_SliderList.cshtml
@@ -25,7 +25,7 @@
         settings.Columns.Add("ButtonText");
         settings.Columns.Add("ButtonLinkUrl");
         settings.Columns.Add("SortOrder");
-        settings.Columns.Add("IsActive");
+        settings.Columns.Add("IsActive").Caption="";
         settings.Columns.Add("ImageAltTag");
         settings.Columns.Add(c =>
         {
