--- a/WMS/Views/Theme/Default/TenantWebsites/Create.cshtml
+++ b/WMS/Views/Theme/Default/TenantWebsites/Create.cshtml
@@ -73,6 +73,13 @@
                 </div>
             </div>
             <div class="input-group h-100 justify-content-center align-items-center">
+                @Html.LabelFor(model => model.Theme, htmlAttributes: new { @class = "control-label col-md-4" })
+                <div class="col-md-8">
+                    @Html.EnumDropDownListFor(model => model.Theme, "Select Theme", htmlAttributes: new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.Theme, "", new { @class = "text-danger" })
+                </div>
+            </div>
+            <div class="input-group h-100 justify-content-center align-items-center">
                 @Html.LabelFor(model => model.SiteApiUrl, htmlAttributes: new { @class = "control-label col-md-4" })
                 <div class="col-md-8">
                     @Html.EditorFor(model => model.SiteApiUrl, new { htmlAttributes = new { @class = "form-control" } })
