--- a/WMS/Views/Theme/Default/WebsiteContentPages/Edit.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteContentPages/Edit.cshtml
@@ -6,19 +6,48 @@
 @{
     ViewBag.Title = "Edit";
 }
-
 @section scripts {
 
     @Html.DevExpress().GetStyleSheets(
-        new StyleSheet { ExtensionType = ExtensionType.HtmlEditor, Theme = GaneStaticAppExtensions.DevexTheme }
+    new StyleSheet { ExtensionType = ExtensionType.HtmlEditor, Theme = GaneStaticAppExtensions.DevexTheme },
+        new StyleSheet { ExtensionType = ExtensionType.SpinEdit, Theme = GaneStaticAppExtensions.DevexTheme },
+        new StyleSheet { ExtensionType = ExtensionType.DateEdit, Theme = GaneStaticAppExtensions.DevexTheme },
+         new StyleSheet { ExtensionType = ExtensionType.UploadControl, Theme = GaneStaticAppExtensions.DevexTheme }
         )
 
     @Html.DevExpress().GetScripts(
-        new Script { ExtensionType = ExtensionType.HtmlEditor }
+        new Script { ExtensionType = ExtensionType.SpinEdit },
+        new Script { ExtensionType = ExtensionType.DateEdit },
+          new Script { ExtensionType = ExtensionType.UploadControl },
+            new Script { ExtensionType = ExtensionType.HtmlEditor }
         )
 }
-<h2><span>Edit Website Content Page</span></h2>
+<script type="text/javascript">
+    function onFileUploadComplete(s, e) {
+        if (e.callbackData) {
+            $("#dvfiles").show();
+            var fileData = e.callbackData.split('|');
+            var Fileobj = { FileName: fileData };
+            var result = $("#uploaderTenantDept").tmpl(Fileobj);
+            $("#dvfiles").append(result);
+            $('.se-pre-con').hide();
+            $("#FileLength").val('True');
 
+        }
+
+
+    }
+    function onFileUploadStart(s, e) {
+        if ($("#FileLength").val() == 'True') {
+            e.cancel = true;
+            alert("Only one file allow to be select");
+            return;
+        }
+    }
+</script>
+<h2><span>Edit Website Content Page</span></h2>
+@Html.Hidden("websiteContent", true)
+@Html.Hidden("hdPFiles", (List<string>)ViewBag.Files)
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
@@ -32,6 +61,13 @@
         <div class="col-md-8">
             @Html.EditorFor(model => model.Title, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="input-group h-100 justify-content-center align-items-center">
+        @Html.LabelFor(model => model.ShortDescription, htmlAttributes: new { @class = "control-label col-md-4" })
+        <div class="col-md-8">
+            @Html.TextAreaFor(model => model.ShortDescription, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.ShortDescription, "", new { @class = "text-danger" })
         </div>
     </div>
 
@@ -56,6 +92,42 @@
         <div class="col-md-8">
             @Html.Partial("PlaceholdersHtmlEditorPartial", new HtmlEditorModel() { HtmlContent = Model.Content, EditorName = "Content", CallbackController = "DevexHelper", CallbackAction = "HtmlEditorWebsiteContentEditorPartial", Height = 200 })
             @Html.ValidationMessageFor(model => model.Content, "", new { @class = "text-danger" })
+        </div>
+    </div>
+    <div class="input-group h-100 justify-content-center align-items-center">
+        @Html.Label("Image", new { @class = "col-md-4" })
+        <div class="col-md-8">
+            @Html.Partial("_Uploader")
+            @Html.Hidden("FileLength", (bool?)ViewBag.FileLength)
+            <br />
+            <div id="dvfiles">
+
+                <strong>Uploaded Files</strong>
+                @foreach (var file in ViewBag.Files)
+                {
+
+                    <table>
+                        <tr>
+                            <td id="tdProductfileName">@file</td>
+                            <td>
+                                <p>&nbsp;</p>
+                            </td>
+                            <td><a class="LRemove" onclick="_RemoveLogoFile('@file')">Remove</a></td>
+                            <td>
+                                <p>&nbsp;</p>
+                            </td>
+
+                        </tr>
+                    </table>
+                }
+            </div>
+        </div>
+    </div>
+    <div class="input-group h-100 justify-content-center align-items-center">
+        @Html.LabelFor(model => model.ImageAltTag, htmlAttributes: new { @class = "control-label col-md-4" })
+        <div class="col-md-8">
+            @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.ImageAltTag, "", new { @class = "text-danger" })
         </div>
     </div>
     <div class="input-group h-100 justify-content-center align-items-center">
@@ -92,12 +164,20 @@
     </div>
 </div>
 
-        <div class="input-group h-100 justify-content-center align-items-center">
-            <div class="col-md-offset-2 col-md-10 bottom-right">
-                <input type="submit" class="btn btn-primary" value="Create" />
-                <div class="back-list">@Html.ActionLink("Back to List", "Index", new { SiteId = Model.SiteID }, new { @class = "btn btn-default" })</div>
-            </div>
+    <div class="input-group h-100 justify-content-center align-items-center">
+        <div class="col-md-offset-2 col-md-10 bottom-right">
+            <input type="submit" class="btn btn-primary" value="Create" />
+            <div class="back-list">@Html.ActionLink("Back to List", "Index", new { SiteId = Model.SiteID }, new { @class = "btn btn-default" })</div>
         </div>
-   
+    </div>
+
 }
 
+<script id="uploaderTenantDept" type="text/x-jquery-tmpl">
+    <tr>
+        <td id="tdfileName">${FileName}</td>
+        <td><p>&nbsp;</p></td>
+        <td><a class="LRemove" onclick="_RemoveLogoFile('${FileName}')">Remove</a></td>
+
+    </tr>
+</script>
