--- a/WarehouseEcommerce/Views/Theme/University/Shared/_LoginRegisterPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_LoginRegisterPartial.cshtml
@@ -1,6 +1,7 @@
 ﻿<div class="modal fade" id="signupPopup">
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
+            <input id="Placecheck" type="hidden" />
             <button type="button"
                     class="close"
                     data-dismiss="modal"
@@ -16,29 +17,29 @@
                     @Html.Action("Login", "User")
 
                     @*<form class="loginForm">
-                            <div class="form-group">
-                                <label for="username">Username/Email</label>
-                                <input type="text" id="username" class="form-control" />
-                            </div>
-                            <div class="form-group">
-                                <label for="password">Password</label>
-                                <input type="password" class="form-control" id="password" />
-                            </div>
-                            <button type="submit" class="btn btn-primary loginBtn">
-                                Login
-                            </button>
-                            <div class="rememberWrap">
-                                <div class="form-check">
-                                    <input type="checkbox"
-                                           class="form-check-input"
-                                           id="rememberme" />
-                                    <label class="form-check-label" for="rememberme">Remember Me</label>
-                                </div>
-                                <span class="losturpwd">
-                                    Lost your password?
-                                </span>
-                            </div>
-                        </form>*@
+                    <div class="form-group">
+                        <label for="username">Username/Email</label>
+                        <input type="text" id="username" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control" id="password" />
+                    </div>
+                    <button type="submit" class="btn btn-primary loginBtn">
+                        Login
+                    </button>
+                    <div class="rememberWrap">
+                        <div class="form-check">
+                            <input type="checkbox"
+                                   class="form-check-input"
+                                   id="rememberme" />
+                            <label class="form-check-label" for="rememberme">Remember Me</label>
+                        </div>
+                        <span class="losturpwd">
+                            Lost your password?
+                        </span>
+                    </div>
+                </form>*@
                     <div class="registrationSec">
                         <h3 class="head">Registration</h3>
                         <p>
@@ -61,19 +62,19 @@
                     @Html.Action("Create", "User")
 
                     @*<form class="loginForm">
-                            <div class="form-group">
-                                <label for="username">Username</label>
-                                <input type="text" id="username" class="form-control" />
-                            </div>
-                            <div class="form-group">
-                                <label for="username">Email Address</label>
-                                <input type="email" id="username" class="form-control" />
-                            </div>
-                            <div class="form-group">
-                                <label for="password">Password</label>
-                                <input type="password" class="form-control" id="password" />
-                            </div>
-                        </form>*@
+                    <div class="form-group">
+                        <label for="username">Username</label>
+                        <input type="text" id="username" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label for="username">Email Address</label>
+                        <input type="email" id="username" class="form-control" />
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control" id="password" />
+                    </div>
+                </form>*@
                     <div class="registrationSec">
                         <p>
                             Your personal data will be used to support your experience
