--- a/WMS/Views/Theme/Default/WebsiteSliders/Details.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteSliders/Details.cshtml
@@ -27,11 +27,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.IamgeAltTag)
+            @Html.DisplayNameFor(model => model.ImageAltTag)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.IamgeAltTag)
+            @Html.DisplayFor(model => model.ImageAltTag)
         </dd>
 
         <dt>
