--- a/WMS/Views/Theme/Default/ProductAllowances/Details.cshtml
+++ b/WMS/Views/Theme/Default/ProductAllowances/Details.cshtml
@@ -11,11 +11,11 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.EmployeeRoles.Id)
+            @Html.DisplayNameFor(model => model.Roles.Id)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.EmployeeRoles.Id)
+            @Html.DisplayFor(model => model.Roles.Id)
         </dd>
 
         <dt>
