--- a/WMS/Views/Theme/Default/WebsiteDiscountCodes/Delete.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteDiscountCodes/Delete.cshtml
@@ -36,11 +36,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.IamgeAltTag)
+            @Html.DisplayNameFor(model => model.ImageAltTag)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.IamgeAltTag)
+            @Html.DisplayFor(model => model.ImageAltTag)
         </dd>
 
         <dt>
@@ -52,11 +52,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.HoverIamgeAltTag)
+            @Html.DisplayNameFor(model => model.HoverImageAltTag)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.HoverIamgeAltTag)
+            @Html.DisplayFor(model => model.HoverImageAltTag)
         </dd>
 
         <dt>
