--- a/WMS/Views/Theme/Default/WebsiteSliders/Delete.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteSliders/Delete.cshtml
@@ -28,11 +28,11 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.IamgeAltTag)
+            @Html.DisplayNameFor(model => model.ImageAltTag)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.IamgeAltTag)
+            @Html.DisplayFor(model => model.ImageAltTag)
         </dd>
 
         <dt>
